# next-client-win

./: .gitignore  Cargo.toml  LICENSE-MIT  README.md  build.rs  menu.rc  resource.rc
.github/workflows/: release.yml
bindings/: Cargo.toml  build.rs
ncsync/: Cargo.toml
ncsync/bindings/: build.rs
ncsync/src/: main.rs
src/: lib.rs  main.rs
