[package]
name = "next_client_win"
version = "0.1.7"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ncs = { git = "https://github.com/anotherhollow1125/next-client", rev = "b6b815be892939fc343996b3d6e69f641b3be998" }
bindings = { path = "bindings" }
windows = "0.19.0"
anyhow = "1.0.43"
dotenv = "0.15.0"
log4rs = "1.0.0"
log = "0.4.14"
notify = "4.0.17"
tokio = { version = "1.8.1", features = ["full"] }
if_chain = "1.0.1"
rpassword = "5.0.1"
rust-ini = "0.17.0"
reqwest = "0.11.4"
fs_extra = "1.2.0"
regex = "1.5.4"
once_cell = "1.8.0"

[build-dependencies]
embed-resource = "1.6.3"

[profile.release]
opt-level = 3