[package]
name = "next_client_win"
version = "0.1.18"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ncs = { git = "https://github.com/anotherhollow1125/next-client", rev = "68ebddc43c23bd36ec10f27b15d07c56786e8a78" }
# ncs = { path = "../ncs" } # for develop
# bindings = { path = "bindings" }
anyhow = "1.0.43"
dotenv = "0.15.0"
log4rs = "1.0.0"
log = "0.4.14"
notify = "4.0.17"
tokio = { version = "1.12.0", features = ["full"] }
if_chain = "1.0.1"
rpassword = "5.0.1"
rust-ini = "0.17.0"
reqwest = "0.11.5"
fs_extra = "1.2.0"
regex = "1.5.4"
once_cell = "1.8.0"
async-recursion = "0.3.2"

[dependencies.windows]
version = "0.27.0"
features = [
    "std",
    "alloc",
    "Win32_Foundation",
    "Win32_System",
    "Win32_System_Console",
    "Win32_System_DataExchange",
    "Win32_System_LibraryLoader",
    "Win32_UI_Shell",
    "Win32_Security",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Graphics_Gdi",
    "Win32_System_Threading",
]


[build-dependencies]
embed-resource = "1.6.3"

[profile.release]
opt-level = 3