[package]
name = "ncsync"
version = "0.1.0"
author = "namnium"
about = "CLI tool for next client."
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ncs = { git = "https://github.com/anotherhollow1125/next-client", rev = "8bc62b85d4cb53c14bacf527b1433d7b9b5d44b1" }
bindings = { path = "bindings" }
windows = "0.21.1"
# anyhow = "1.0.43"
quicli = "0.4.0"
structopt = "0.2.18"
glob = "0.3.0"
failure = "0.1.8"
if_chain = "1.0.2"